// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Price /> renders correctly 1`] = `
<span
  className="price"
>
  <span
    className="sign"
  >
    RUB 
  </span>
  <span>
    100
    .
    58
  </span>
</span>
`;

exports[`<Price /> renders correctly 2`] = `
<span
  className="price"
>
  <span>
    100
  </span>
  <span
    className={null}
  >
     USD
  </span>
</span>
`;

exports[`<Price /> renders correctly 3`] = `
<span
  className="price"
>
  <span>
    <b>
      100
    </b>
    .
    00
  </span>
  <span
    className={null}
  >
     USD
  </span>
</span>
`;
